<resources>
    <string name="app_name">FoodTopia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="aCardGame">a card game saga</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>

    <string name="start">Start</string>
    <string name="scoreNeeded">Score needed to win: %1$s</string>

    <string name="levelDone">Level done</string>
    <string name="bestScore">Best score: %1$s</string>
    <string name="replay">Replay</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="language">Language</string>
    <string name="reset">Reset game progress</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="ace">A</string>
    <string name="king">K</string>
    <string name="queen">Q</string>
    <string name="jack">J</string>

    <string-array name="rightAnswers">
        <item>Well done!</item>
        <item>Good job!</item>
        <item>That\'s right!</item>
        <item>You got it!</item>
        <item>Awesome!</item>
    </string-array>

    <string-array name="wrongAnswers">
        <item>Sorry!</item>
        <item>That was wrong.</item>
        <item>Sorry, try again!</item>
        <item>Better luck next time.</item>
        <item>Try harder!</item>
    </string-array>

    <string name="streakBonus">Steak bonus: %1$s</string>
    <string name="timeLeft">Time left:</string>
    <string name="nextCardis">Next card is</string>
    <string name="lower">Lower</string>
    <string name="higher">Higher</string>
    <string name="letsgo">Lets go!</string>

    <string name="yourTurn">Your turn</string>
    <string name="gotPair">I\'ve got a pair!</string>
    <string name="wantYour">I want all your %1$ss</string>
    <string name="hereYouGo">Here you go!</string>
    <string name="goFish">GO FISH!</string>
    <string name="youGoAgain">You can go again</string>
    <string name="darn">Darn\' it!</string>

    <string name="chooseSuite">Choose a new suite</string>
    <string name="myTurn">My turn!</string>
    <string name="AIchangedSuite">I changed the suite to      </string>
    <string name="gameOver">Game Over</string>
    <string name="pass">Pass</string>
    <string name="iPass">I pass</string>



    <string name="rulesForGame">"Rules for game %1$s: \n %2$s"</string>

    <string-array name="gameName">
        <item>High - Low</item>
        <item>Go fish</item>
        <item>Crazy 8</item>
    </string-array>

    <string-array name="Rules">
        <item>The goal of the game is to guess if the next card in the deck is higher or lower than the previous card. If you get a number of guesses in a row right, you get bonus points. </item>
        <item>On your turn, ask the other player if they have any cards of a specific rank. If they have matching cards in their hand, they have to give you all of them and you lay them out for scoring. If they don’t have any cards, then you draw a card. You get score based on how many pairs you and your opponent have at the end of the game.</item>
        <item>The goal of Crazy Eights is to get rid of all the cards in your hand before the other player. You each start with 5 cards in your hand and a face-up card in the middle. If you have a card that matches either the suit or rank of the card in the middle, play it on your turn. Otherwise, you draw cards until you’re able to play one. The 8s are wild, so you can play them whenever you want and choose the suit for the next player. You get score based on what is left in your opponents hand when someones hand is empty</item>



    </string-array>


</resources>