<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenyFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView17">

            <ImageView
                android:id="@+id/imProgress"
                android:layout_width="207dp"
                android:layout_height="83dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imbPlay"
                app:srcCompat="@drawable/buttontext_large_orange_round" />

            <ImageView
                android:id="@+id/imbPlay"
                android:layout_width="207dp"
                android:layout_height="83dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/buttontext_large_orange_round" />

            <TextView
                android:id="@+id/tvPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zen_dots"
                android:text="@string/play"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/imbPlay"
                app:layout_constraintEnd_toEndOf="@+id/imbPlay"
                app:layout_constraintStart_toStartOf="@+id/imbPlay"
                app:layout_constraintTop_toTopOf="@+id/imbPlay" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zen_dots"
                android:text="Progress"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/imProgress"
                app:layout_constraintEnd_toEndOf="@+id/imProgress"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="@+id/imProgress"
                app:layout_constraintTop_toTopOf="@+id/imProgress" />

            <ImageView
                android:id="@+id/imSettings"
                android:layout_width="207dp"
                android:layout_height="83dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imProgress"
                app:srcCompat="@drawable/buttontext_large_orange_round" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zen_dots"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/imSettings"
                app:layout_constraintEnd_toEndOf="@+id/imbPlay"
                app:layout_constraintStart_toStartOf="@+id/imbPlay"
                app:layout_constraintTop_toBottomOf="@+id/imProgress" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="300dp"
            android:layout_height="335dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/box_orange_rounded" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="223dp"
            android:layout_height="207dp"
            android:rotation="-15"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintEnd_toEndOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/imageView17"
            app:srcCompat="@drawable/characters_0007" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_dots"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView19"
            app:layout_constraintEnd_toEndOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView17" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>