<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMode0Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imHigherGamoeMode0"
            android:layout_width="160dp"
            android:layout_height="56dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="#00FFFFFF"
            android:scaleType="centerInside"
            android:src="@drawable/buttontext_large_orange_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/imLowerGamoeMode0"
            android:layout_width="160dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="#00FFFFFF"
            android:scaleType="centerInside"
            android:src="@drawable/buttontext_large_orange_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvHigher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_dots"
            android:text="@string/higher"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imHigherGamoeMode0"
            app:layout_constraintEnd_toEndOf="@+id/imHigherGamoeMode0"
            app:layout_constraintStart_toStartOf="@+id/imHigherGamoeMode0"
            app:layout_constraintTop_toTopOf="@+id/imHigherGamoeMode0" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_dots"
            android:text="@string/lower"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imLowerGamoeMode0"
            app:layout_constraintEnd_toEndOf="@+id/imLowerGamoeMode0"
            app:layout_constraintStart_toStartOf="@+id/imLowerGamoeMode0"
            app:layout_constraintTop_toTopOf="@+id/imLowerGamoeMode0" />

        <ProgressBar
            android:id="@+id/pbTimeLeft"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/zen_dots"
            android:text="@string/timeLeft"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/pbTimeLeft"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvNextCardGameMode0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/zendots"
            android:text="@string/nextCardis"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/imHigherGamoeMode0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/imHigherGamoeMode0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imDrawDeckGameMode0"
                android:layout_width="140dp"
                android:layout_height="220dp"
                android:src="@drawable/backside_pile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <FrameLayout
                android:id="@+id/flShowCardGameMode0"
                android:layout_width="140dp"
                android:layout_height="220dp"
                android:layout_marginBottom="-10dp"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imDrawDeckGameMode0">

            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imAIGameMode0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="200dp"
            android:src="@drawable/characters_0003"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imTextAIGAmeMode0"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/textbox_blank_side"
            app:layout_constraintBottom_toTopOf="@+id/imAIGameMode0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAITextGameMode0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/zen_dots"
            android:text="Lets go!"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imTextAIGAmeMode0"
            app:layout_constraintEnd_toEndOf="@+id/imTextAIGAmeMode0"
            app:layout_constraintStart_toStartOf="@+id/imTextAIGAmeMode0"
            app:layout_constraintTop_toTopOf="@+id/imTextAIGAmeMode0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/tvCurrentScoreGamoeMode0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/zen_dots"
                android:text=": 0"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:rotation="-15"
                android:src="@drawable/icon_small_diamond"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>